# RtmpPush

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xhunmon/rtmppush/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  va_lib.cpp
app/src/main/cpp/core/: AudioTask.cpp  AudioTask.h  Pusher.cpp  Pusher.h  VideoTask.cpp  VideoTask.h  sync_queue.h  utils.h
app/src/main/cpp/include/: x264.h  x264_config.h
app/src/main/cpp/librtmp/: CMakeLists.txt  COPYING  amf.c  rtmp.c
app/src/main/java/com/xhunmon/rtmppush/: MainActivity.java
app/src/main/java/com/xhunmon/rtmppush/core/: AudioTask.java  Pusher.java  VideoTask.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xhunmon/rtmppush/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
